--- a/fr/index.html
+++ b/fr/index.html
@@ -10,9 +10,8 @@
 </head>
 
 <header>
-
     <div>
-        <a href="/index.html"><img src="/assets/icon/logo.svg" alt="Logo"></a>
+        <a href="/fr/index.html"><img src="/assets/icon/logo.svg" alt="Logo"></a>
         <button id="button-header" aria-label="Menu burger"><img src="/assets/icon/menuburger.svg" alt="Menu burger" aria-expanded="false" ></button>
     </div>
     <nav class="menu">
@@ -28,14 +27,28 @@
             <li><a href="contact.html">CONTACT</a></li>
         </ul>
     </nav>
-
-
-
-
-
-
-
 </header>
+
+
+<footer>
+    <h1>RADIUMFALL</h1>
+    <img src="/assets/icon/icons.svg" alt="Logo" class="logo">
+    <div class="contact">
+        <p>BANJAMIN.BOBEL@EDU.UNIV-FCOMTE.FR</p>
+        <p>(33) 12345 12112</p>
+        <p>4 PL. LUCIEN THARRADIN<br>25200 MONTBÉLIARD<br>FRANCE</p>
+    </div>
+    <hr>
+    <div class="menu">
+        <a href="#">À Propos</a><br><br>
+        <a href="#">Glossaire</a><br><br>
+        <a href="#">Contact</a>
+    </div>
+    <img src="/assets/icon/mmi.svg" alt="Logo MMI" class="mmi-logo">
+    <div class="credits">
+        Ce site est un projet réalisé dans le cadre d’un exercice pédagogique au département MMI Montbéliard
+    </div>
+</footer>
 
 
 
