--- a/fr/index.html
+++ b/fr/index.html
@@ -12,6 +12,7 @@
 <header>
     <div>
         <a href="/fr/index.html"><img src="/assets/icon/logo.svg" alt="Logo"></a>
+        <a href="/en/index.html" class="langue__header"><button aria-label="Langue"><img src="/assets/icon/fr.svg" alt="Langue"></button></a>
         <button id="button-header" aria-label="Menu burger"><img src="/assets/icon/menuburger.svg" alt="Menu burger" aria-expanded="false" ></button>
     </div>
     <nav class="menu">
