quelque reglage de la page film

--- a/en/movie.html
+++ b/en/movie.html
@@ -12,7 +12,7 @@
 <header>
     <div>
         <a href="/en/index.html"><img src="/assets/icon/logo.svg" alt="Logo"></a>
-        <a href="/en/movie.html" class="langue__header"><button aria-label="Language"><img src="/assets/icon/us.svg" alt="Language"></button></a>
+        <a href="/fr/film.html" class="langue__header"><button aria-label="Language"><img src="/assets/icon/us.svg" alt="Language"></button></a>
         <button id="button-header" aria-label="Burger menu"><img src="/assets/icon/menuburger.svg" alt="Burger menu" aria-expanded="false" ></button>
     </div>
     <nav class="menu">
@@ -65,17 +65,23 @@
         <div class="carousel__items">
             <div class="carousel__item">
                 <div class="card_content">
-                    <img src="/assets/img/affiche1.webp" alt="poster1" class="image-carousel">
+                    <a href="https://www.allocine.fr/film/fichefilm_gen_cfilm=254043.html" target="_blank">
+                        <img src="/assets/img/affiche1.webp" alt="affiche1" class="image-carousel">
+                    </a>
                 </div>
             </div>
             <div class="carousel__item">
                 <div class="card_content">
-                    <img src="/assets/img/affiche2.webp" alt="poster2" class="image-carousel">
+                    <a href="https://www.allocine.fr/film/fichefilm_gen_cfilm=3651.html" target="_blank">
+                        <img src="/assets/img/affiche2.webp" alt="affiche2" class="image-carousel">
+                    </a>
                 </div>
             </div>
             <div class="carousel__item">
                 <div class="card_content">
-                    <img src="/assets/img/affiche3.webp" alt="poster3" class="image-carousel">
+                    <a href="https://www.allocine.fr/film/fichefilm_gen_cfilm=296168.html" target="_blank">
+                        <img src="/assets/img/affiche3.webp" alt="affiche3" class="image-carousel">
+                    </a>
                 </div>
             </div>
         </div>
