--- a/fr/film.html
+++ b/fr/film.html
@@ -38,7 +38,7 @@
     
     <p class="main__description">Into Eternity, réalisé par Michael Madsen en 2010, est un documentaire fascinant qui plonge dans les profondeurs de la gestion des déchets nucléaires à long terme. Le film se concentre sur le projet Onkalo en Finlande, le premier site de stockage géologique profond au monde, conçu pour conserver les déchets radioactifs pendant 100 000 ans. Cette entreprise titanesque soulève des questions scientifiques et philosophiques complexes sur la manière de garantir la sécurité des générations futures.</p>
     
-    <video controls class="trailer_fr">
+    <video controls class="trailer">
         <source src="/assets/video/trailer_fr.mp4" type="video/mp4">
     </video>
 
@@ -65,17 +65,23 @@
         <div class="carousel__items">
             <div class="carousel__item">
                 <div class="card_content">
-                    <img src="/assets/img/affiche1.webp" alt="affiche1" class="image-carousel">
+                    <a href="https://www.allocine.fr/film/fichefilm_gen_cfilm=254043.html" target="_blank">
+                        <img src="/assets/img/affiche1.webp" alt="affiche1" class="image-carousel">
+                    </a>
                 </div>
             </div>
             <div class="carousel__item">
                 <div class="card_content">
-                    <img src="/assets/img/affiche2.webp" alt="affiche2" class="image-carousel">
+                    <a href="https://www.allocine.fr/film/fichefilm_gen_cfilm=3651.html" target="_blank">
+                        <img src="/assets/img/affiche2.webp" alt="affiche2" class="image-carousel">
+                    </a>
                 </div>
             </div>
             <div class="carousel__item">
                 <div class="card_content">
-                    <img src="/assets/img/affiche3.webp" alt="affiche3" class="image-carousel">
+                    <a href="https://www.allocine.fr/film/fichefilm_gen_cfilm=296168.html" target="_blank">
+                        <img src="/assets/img/affiche3.webp" alt="affiche3" class="image-carousel">
+                    </a>
                 </div>
             </div>
         </div>
