page realisateur anglais et francais + correction certain probelme

--- a/en/movie.html
+++ b/en/movie.html
@@ -17,14 +17,14 @@
     </div>
     <nav class="menu">
         <ul>
-            <li><a href="matiere.html">RADIOACTIVE MATERIAL</a></li>
-            <li><a href="film.html">MOVIE</a></li>
-            <li><a href="Realisateur.html">DIRECTOR</a></li>
-            <li><a href="livre.html">BOOK</a></li>
-            <li><a href="musique.html">MUSIC</a></li>
-            <li><a href="apropos.html">ABOUT</a></li>
-            <li><a href="autreprojet.html">OTHER PROJECTS</a></li>
-            <li><a href="glossaire.html">GLOSSARY</a></li>
+            <li><a href="radioactivemat.html">RADIOACTIVE MATERIAL</a></li>
+            <li><a href="movie.html">FILM</a></li>
+            <li><a href="director.html">DIRECTOR</a></li>
+            <li><a href="book.html">BOOK</a></li>
+            <li><a href="music.html">MUSIC</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="otherproject.html">OTHER PROJECTS</a></li>
+            <li><a href="glossary.html">GLOSSARY</a></li>
             <li><a href="contact.html">CONTACT</a></li>
         </ul>
     </nav>
@@ -44,15 +44,15 @@
 
     <p class="description">The documentary is structured as a message to these future generations, posing essential questions: how to warn our descendants of the dangers hidden underground? What signs or languages could they understand? The film highlights the challenges of intergenerational communication and the preservation of information over unimaginable time scales.</p>
 
-    <img src="/assets/img/film1.webp" alt="intoeternity" class="image_film">
+    <img src="/assets/img/film1.webp" alt="intoeternity" class="img_film">
 
     <p class="description">Madsen adopts a striking stylistic approach, combining clean images with thoughtful narration to explore the ethical and practical implications of nuclear storage. The film questions not only the technical feasibility of such a project but also our collective responsibility towards the future of humanity. It raises the question of whether we have the right to impose this burden on 3,000 future generations simply to maintain our current way of life.</p>
 
-    <img src="/assets/img/film2.webp" alt="intoeternity" class="image_film">
+    <img src="/assets/img/film2.webp" alt="intoeternity" class="img_film">
 
     <p class="description">Madsen adopts a striking stylistic approach, combining clean images with thoughtful narration to explore the ethical and practical implications of nuclear storage. The film questions not only the technical feasibility of such a project but also our collective responsibility towards the future of humanity. It raises the question of whether we have the right to impose this burden on 3,000 future generations simply to maintain our current way of life.</p>
 
-    <img src="/assets/img/film3.webp" alt="intoeternity" class="image_film">
+    <img src="/assets/img/film3.webp" alt="intoeternity" class="img_film">
 
     <p class="description">Into Eternity has been praised for its ability to provoke deep reflection on the limits of science and technology in the face of environmental challenges. It has received positive reviews for its suggestive presentation and bold exploration of the dangers associated with nuclear waste. The film won the Green Screen Documentary Award at the International Documentary Film Festival Amsterdam (IDFA). <br><br>
 
@@ -115,7 +115,7 @@
     </div>
 </footer>
 
-<body>
+
     
 </body>
 </html>
