--- a/fr/film.html
+++ b/fr/film.html
@@ -9,6 +9,8 @@
     <title>Film</title>
 </head>
 
+<body>
+    
 <header>
     <div>
         <a href="/fr/index.html"><img src="/assets/icon/logo.svg" alt="Logo"></a>
@@ -44,15 +46,15 @@
 
     <p class="description">Le documentaire est structuré comme un message adressé à ces générations futures, posant des questions essentielles : comment avertir nos descendants des dangers cachés sous terre ? Quels signes ou langages pourraient-ils comprendre ? Le film met en lumière les défis liés à la communication intergénérationnelle et à la préservation de l'information sur des échelles de temps inimaginables.</p>
 
-    <img src="/assets/img/film1.webp" alt="intoeternity" class="image_film">
+    <img src="/assets/img/film1.webp" alt="intoeternity" class="img_film">
 
     <p class="description">Madsen adopte une approche stylistique saisissante, combinant des images épurées avec une narration réfléchie pour explorer les implications éthiques et pratiques du stockage nucléaire. Le film interroge non seulement la faisabilité technique d'un tel projet, mais aussi notre responsabilité collective envers l'avenir de l'humanité. Il soulève la question de savoir si nous avons le droit d'imposer ce fardeau à 3 000 générations futures simplement pour maintenir notre mode de vie actuel.</p>
 
-    <img src="/assets/img/film2.webp" alt="intoeternity" class="image_film">
+    <img src="/assets/img/film2.webp" alt="intoeternity" class="img_film">
 
     <p class="description">Madsen adopte une approche stylistique saisissante, combinant des images épurées avec une narration réfléchie pour explorer les implications éthiques et pratiques du stockage nucléaire. Le film interroge non seulement la faisabilité technique d'un tel projet, mais aussi notre responsabilité collective envers l'avenir de l'humanité. Il soulève la question de savoir si nous avons le droit d'imposer ce fardeau à 3 000 générations futures simplement pour maintenir notre mode de vie actuel.</p>
 
-    <img src="/assets/img/film3.webp" alt="intoeternity" class="image_film">
+    <img src="/assets/img/film3.webp" alt="intoeternity" class="img_film">
 
     <p class="description">Into Eternity a été salué pour sa capacité à provoquer une réflexion profonde sur les limites de la science et de la technologie face aux défis environnementaux. Il a reçu des critiques positives pour sa présentation suggestive et son exploration audacieuse des dangers liés aux déchets nucléaires. Le film a remporté le Green Screen Documentary Award au Festival International du Film Documentaire d'Amsterdam (IDFA). <br><br>
 
@@ -123,8 +125,6 @@
 
 
 
-
-<body>
     
 </body>
 </html>
