page livre francais et anglais

--- a/en/movie.html
+++ b/en/movie.html
@@ -105,8 +105,8 @@
     </div>
     <hr>
     <div class="menu">
-        <a href="apropos.html">About</a><br><br>
-        <a href="glossaire.html">Glossary</a><br><br>
+        <a href="about.html">About</a><br><br>
+        <a href="glossary.html">Glossary</a><br><br>
         <a href="contact.html">Contact</a>
     </div>
     <img src="/assets/icon/mmi.svg" alt="MMI Logo" class="mmi-logo">
