--- a/en/radioactivemat.html
+++ b/en/radioactivemat.html
@@ -68,11 +68,11 @@
     </div>
     <hr>
     <div class="menu">
-        <a href="apropos.html">About</a><br><br>
-        <a href="glossaire.html">Glossary</a><br><br>
+        <a href="about.html">About</a><br><br>
+        <a href="glossary.html">Glossary</a><br><br>
         <a href="contact.html">Contact</a>
     </div>
-    <img src="/assets/icon/mmi.svg" alt="Logo MMI" class="mmi-logo">
+    <img src="/assets/icon/mmi.svg" alt="MMI Logo" class="mmi-logo">
     <div class="credits">
         This site is a project carried out as part of an educational exercise at the MMI Montbéliard department
     </div>
