--- a/fr/contact.html
+++ b/fr/contact.html
@@ -18,7 +18,7 @@
         <ul>
             <li><a href="matiere.html">LA METIERE RADIOACTIVE</a></li>
             <li><a href="film.html">FILM</a></li>
-            <li><a href="Realisateur.html">RÉALLISATEUR</li>
+            <li><a href="Realisateur.html">RÉALISATEUR</li>
             <li><a href="livre.html">LIVRE</a></li>
             <li><a href="musique.html">MUSIQUE</a></li>
             <li><a href="apropos.html">A PROPOS</a></li>
