page gloassaire anglais et francais + page 404 + reglage probleme

--- a/en/about.html
+++ b/en/about.html
@@ -18,14 +18,14 @@
     </div>
     <nav class="menu">
         <ul>
-            <li><a href="matiere.html">RADIOACTIVE MATERIAL</a></li>
-            <li><a href="film.html">FILM</a></li>
-            <li><a href="Realisateur.html">DIRECTOR</a></li>
-            <li><a href="livre.html">BOOK</a></li>
-            <li><a href="musique.html">MUSIC</a></li>
-            <li><a href="apropos.html">ABOUT</a></li>
-            <li><a href="autreprojet.html">OTHER PROJECTS</a></li>
-            <li><a href="glossaire.html">GLOSSARY</a></li>
+            <li><a href="radioactivemat.html">RADIOACTIVE MATERIAL</a></li>
+            <li><a href="movie.html">FILM</a></li>
+            <li><a href="director.html">DIRECTOR</a></li>
+            <li><a href="book.html">BOOK</a></li>
+            <li><a href="music.html">MUSIC</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="otherproject.html">OTHER PROJECTS</a></li>
+            <li><a href="glossary.html">GLOSSARY</a></li>
             <li><a href="contact.html">CONTACT</a></li>
         </ul>
     </nav>
@@ -33,7 +33,7 @@
 
 <main>
 
-    <img src="/assets/img/apropos.webp" alt="About" class="main__image">
+    <img src="/assets/img/about.webp" alt="About" class="main__image">
 
     <h1 class="main__title">About Me</h1>
     
@@ -58,7 +58,7 @@
         </div>
     </div>
 
-    <p class="main__description">We have chosen to approach this topic from various angles to offer a comprehensive and nuanced understanding: <br><br>
+    <p class="description">We have chosen to approach this topic from various angles to offer a comprehensive and nuanced understanding: <br><br>
         Historical: By examining past disasters, we can learn from mistakes and improve future practices. <br><br>
         Cultural: Music, like that of Kraftwerk, and cinema, with works by directors like Christopher Nolan, offer artistic reflections on the implications of nuclear technology. <br><br>
         Literary: Works like La Centrale by Élisabeth Filhol allow us to explore the human and social impacts of the nuclear industry.
