--- a/en/book.html
+++ b/en/book.html
@@ -41,15 +41,15 @@
 
     <img src="/assets/img/livre1.webp" alt="Livre" class="img_real">
     
-    <p class="main__description">The story follows Yann, a temporary worker who travels across France to perform maintenance work in various power plants. Through his eyes, Filhol depicts a world where precariousness and risk are omnipresent. The workers, often exposed to dangerous radiation, live in constant uncertainty, juggling temporary jobs and difficult living conditions.</p>
+    <p class="description">The story follows Yann, a temporary worker who travels across France to perform maintenance work in various power plants. Through his eyes, Filhol depicts a world where precariousness and risk are omnipresent. The workers, often exposed to dangerous radiation, live in constant uncertainty, juggling temporary jobs and difficult living conditions.</p>
 
     <img src="/assets/img/livre2.webp" alt="Auteur" class="img_real">
 
-    <p class="main__description">Filhol particularly focuses on the widespread subcontracting in the nuclear sector. This massive reliance on temporary workers raises questions about safety and responsibility. Indeed, these workers are often the first exposed to dangers, but also the most easily replaceable. The novel highlights the progressive dehumanization of work, where economic imperatives take precedence over employee well-being.</p>
+    <p class="description">Filhol particularly focuses on the widespread subcontracting in the nuclear sector. This massive reliance on temporary workers raises questions about safety and responsibility. Indeed, these workers are often the first exposed to dangers, but also the most easily replaceable. The novel highlights the progressive dehumanization of work, where economic imperatives take precedence over employee well-being.</p>
 
     <img src="/assets/img/livre3.webp" alt="Centrale" class="img_real">
 
-    <p class="main__description">Filhol's writing is marked by an almost clinical precision, meticulously describing the daily gestures and inner thoughts of her characters. This immersive approach allows readers to fully feel the anxiety and psychological exhaustion faced by these modern "nomads." The palpable tension throughout the novel reflects the constant pressure exerted on these workers. <br><br>
+    <p class="description">Filhol's writing is marked by an almost clinical precision, meticulously describing the daily gestures and inner thoughts of her characters. This immersive approach allows readers to fully feel the anxiety and psychological exhaustion faced by these modern "nomads." The palpable tension throughout the novel reflects the constant pressure exerted on these workers. <br><br>
 
         La Centrale also addresses the psychological consequences of this precarious lifestyle. The character of Loïc, a colleague of Yann, tragically illustrates this reality: unable to bear the pressure, he ends up committing suicide. This personal tragedy highlights the devastating effects of a system that grinds its employees. <br><br>
         
