--- a/en/director.html
+++ b/en/director.html
@@ -42,18 +42,18 @@
 
     <img src="/assets/img/nolan1.webp" alt="christopher nolan" class="img_real">
     
-    <p class="main__description">Time is a central theme in Nolan's filmography. In Interstellar, it becomes an integral part of the plot, where the laws of physics and Einstein's general relativity play a crucial role in the story's progression.
+    <p class="description">Time is a central theme in Nolan's filmography. In Interstellar, it becomes an integral part of the plot, where the laws of physics and Einstein's general relativity play a crucial role in the story's progression.
 
         Similarly, in Tenet, Nolan introduces the concept of time inversion, where certain characters can reverse the flow of time while interacting with a world that follows its normal chronology.
     </p>
 
     <img src="/assets/img/nolan2.webp" alt="christopher camera" class="img_real">
 
-    <p class="main__description">Besides time, Nolan often explores the question of identity and perception. His characters frequently face moral and existential dilemmas, navigating between reality and illusion. This exploration is particularly striking in Inception, where nested dreams challenge the very nature of reality.</p>
+    <p class="description">Besides time, Nolan often explores the question of identity and perception. His characters frequently face moral and existential dilemmas, navigating between reality and illusion. This exploration is particularly striking in Inception, where nested dreams challenge the very nature of reality.</p>
 
     <img src="/assets/img/nolan3.webp" alt="christopher nolan cesar" class="img_real">
 
-    <p class="main__description">Nolan does not just tell captivating stories; he also uses cinema to pose profound philosophical questions. His films address themes such as ethics, existentialism, and the construction of personal identity. For example, in Oppenheimer, he addresses the moral implications and paranoias surrounding nuclear power, highlighting the ethical dilemmas related to science and its applications.</p>
+    <p class="description">Nolan does not just tell captivating stories; he also uses cinema to pose profound philosophical questions. His films address themes such as ethics, existentialism, and the construction of personal identity. For example, in Oppenheimer, he addresses the moral implications and paranoias surrounding nuclear power, highlighting the ethical dilemmas related to science and its applications.</p>
 
 
     <footer>
