--- a/fr/apropos.html
+++ b/fr/apropos.html
@@ -58,7 +58,7 @@
         </div>
     </div>
 
-    <p class="main__description">Nous avons choisi d'aborder ce sujet sous divers angles pour offrir une compréhension complète et nuancée : <br><br>
+    <p class="description">Nous avons choisi d'aborder ce sujet sous divers angles pour offrir une compréhension complète et nuancée : <br><br>
         Historique : En examinant les catastrophes passées, nous pouvons apprendre des erreurs et améliorer les pratiques futures. <br><br>
         Culturel : La musique, comme celle de Kraftwerk, et le cinéma, avec des œuvres de réalisateurs comme Christopher Nolan, offrent des réflexions artistiques sur les implications de la technologie nucléaire. <br><br>
         Littéraire : Des œuvres comme La Centrale d'Élisabeth Filhol permettent d'explorer les impacts humains et sociaux de l'industrie nucléaire.
