--- a/fr/Realisateur.html
+++ b/fr/Realisateur.html
@@ -41,22 +41,22 @@
 
     <img src="/assets/img/nolan1.webp" alt="Christopher Nolan" class="img_real">
     
-    <p class="main__description">Le temps est un thème central dans la filmographie de Nolan. Dans Interstellar, il devient un élément à part entière de l'intrigue, où les lois de la physique et la relativité générale d'Einstein jouent un rôle crucial dans le déroulement de l'histoire. 
+    <p class="description">Le temps est un thème central dans la filmographie de Nolan. Dans Interstellar, il devient un élément à part entière de l'intrigue, où les lois de la physique et la relativité générale d'Einstein jouent un rôle crucial dans le déroulement de l'histoire. 
 
         De même, dans Tenet, Nolan introduit le concept d'inversion temporelle, où certains personnages peuvent inverser le cours du temps tout en interagissant avec un monde qui suit sa chronologie normale. 
     </p>
 
     <img src="/assets/img/nolan2.webp" alt="Christopher Nolan Oppenheimer" class="img_real">
 
-    <p class="main__description">Outre le temps, Nolan explore souvent la question de l'identité et de la perception. Ses personnages sont fréquemment confrontés à des dilemmes moraux et existentiels, naviguant entre réalité et illusion. Cette exploration est particulièrement marquante dans Inception, où les rêves imbriqués remettent en question la nature même de la réalité.</p>
+    <p class="description">Outre le temps, Nolan explore souvent la question de l'identité et de la perception. Ses personnages sont fréquemment confrontés à des dilemmes moraux et existentiels, naviguant entre réalité et illusion. Cette exploration est particulièrement marquante dans Inception, où les rêves imbriqués remettent en question la nature même de la réalité.</p>
 
     <img src="/assets/img/nolan3.webp" alt="Christopher Nolan camera" class="img_real">
 
-    <p class="main__description">Nolan ne se contente pas de raconter des histoires captivantes ; il utilise également le cinéma pour poser des questions philosophiques profondes. Ses films abordent des thèmes comme l'éthique, l'existentialisme et la construction de l'identité personnelle. Par exemple, dans Oppenheimer, il aborde les implications morales et les paranoïas entourant le pouvoir nucléaire, soulignant les dilemmes éthiques liés à la science et à ses applications</p>
+    <p class="description">Nolan ne se contente pas de raconter des histoires captivantes ; il utilise également le cinéma pour poser des questions philosophiques profondes. Ses films abordent des thèmes comme l'éthique, l'existentialisme et la construction de l'identité personnelle. Par exemple, dans Oppenheimer, il aborde les implications morales et les paranoïas entourant le pouvoir nucléaire, soulignant les dilemmes éthiques liés à la science et à ses applications</p>
 
     <img src="/assets/img/nolan4.webp" alt="Christopher nolan cesar" class="img_real">
 
-    <p class="main__description">En conclusion, Christopher Nolan est un cinéaste qui transcende les conventions du cinéma traditionnel. Son obsession pour le temps et son exploration de l'identité humaine offrent une expérience cinématographique riche et stimulante. Ses films ne se contentent pas d'amuser ; ils incitent à réfléchir sur notre perception du monde et sur les choix qui définissent notre existence. Grâce à son style distinctif et ses récits complexes, Nolan continue d'influencer profondément le paysage cinématographique contemporain.</p>
+    <p class="description">En conclusion, Christopher Nolan est un cinéaste qui transcende les conventions du cinéma traditionnel. Son obsession pour le temps et son exploration de l'identité humaine offrent une expérience cinématographique riche et stimulante. Ses films ne se contentent pas d'amuser ; ils incitent à réfléchir sur notre perception du monde et sur les choix qui définissent notre existence. Grâce à son style distinctif et ses récits complexes, Nolan continue d'influencer profondément le paysage cinématographique contemporain.</p>
 
 </main>
 
