--- a/fr/livre.html
+++ b/fr/livre.html
@@ -41,15 +41,15 @@
 
     <img src="/assets/img/livre1.webp" alt="Livre" class="img_real">
     
-    <p class="main__description">Le récit suit Yann, un ouvrier intérimaire qui parcourt la France pour effectuer des travaux de maintenance dans diverses centrales. À travers ses yeux, Filhol dépeint un univers où la précarité et le risque sont omniprésents. Les travailleurs, souvent exposés à des radiations dangereuses, vivent dans une incertitude constante, jonglant avec des emplois temporaires et des conditions de vie difficiles.</p>
+    <p class="description">Le récit suit Yann, un ouvrier intérimaire qui parcourt la France pour effectuer des travaux de maintenance dans diverses centrales. À travers ses yeux, Filhol dépeint un univers où la précarité et le risque sont omniprésents. Les travailleurs, souvent exposés à des radiations dangereuses, vivent dans une incertitude constante, jonglant avec des emplois temporaires et des conditions de vie difficiles.</p>
 
     <img src="/assets/img/livre2.webp" alt="Auteur" class="img_real">
 
-    <p class="main__description">Filhol s'intéresse particulièrement à la sous-traitance généralisée dans le secteur nucléaire. Ce recours massif à des travailleurs intérimaires soulève des questions sur la sécurité et la responsabilité. En effet, ces ouvriers sont souvent les premiers exposés aux dangers, mais aussi les plus facilement remplaçables. Le roman souligne la déshumanisation progressive du travail, où les impératifs économiques priment sur le bien-être des employés.</p>
+    <p class="description">Filhol s'intéresse particulièrement à la sous-traitance généralisée dans le secteur nucléaire. Ce recours massif à des travailleurs intérimaires soulève des questions sur la sécurité et la responsabilité. En effet, ces ouvriers sont souvent les premiers exposés aux dangers, mais aussi les plus facilement remplaçables. Le roman souligne la déshumanisation progressive du travail, où les impératifs économiques priment sur le bien-être des employés.</p>
 
     <img src="/assets/img/livre3.webp" alt="Centrale" class="img_real">
 
-    <p class="main__description">L'écriture de Filhol est marquée par une précision presque clinique, décrivant avec minutie les gestes quotidiens et les pensées intérieures de ses personnages. Cette approche immersive permet de ressentir pleinement l'anxiété et l'épuisement psychologique auxquels sont confrontés ces "nomades" modernes. La tension palpable tout au long du roman reflète la pression constante exercée sur ces travailleurs. <br><br>
+    <p class="description">L'écriture de Filhol est marquée par une précision presque clinique, décrivant avec minutie les gestes quotidiens et les pensées intérieures de ses personnages. Cette approche immersive permet de ressentir pleinement l'anxiété et l'épuisement psychologique auxquels sont confrontés ces "nomades" modernes. La tension palpable tout au long du roman reflète la pression constante exercée sur ces travailleurs. <br><br>
 
         La Centrale aborde également les conséquences psychologiques de ce mode de vie précaire. Le personnage de Loïc, un collègue de Yann, illustre tragiquement cette réalité : incapable de supporter la pression, il finit par se suicider. Ce drame personnel met en lumière les effets dévastateurs d'un système qui broie ses employés. <br><br>
         
