--- a/fr/musique.html
+++ b/fr/musique.html
@@ -41,19 +41,19 @@
 
     <img src="/assets/img/musique1.webp" alt="Kraftwerk" class="img_musique">
     
-    <p class="main__description">À sa sortie, Radioactivity abordait la radioactivité avec une curiosité scientifique. Toutefois, les catastrophes nucléaires comme Tchernobyl et Fukushima ont poussé Kraftwerk à réviser les paroles, transformant la chanson en un plaidoyer anti-nucléaire. Les nouvelles versions mentionnent explicitement des sites de désastres, soulignant l'engagement du groupe envers les mouvements écologistes.</p>
+    <p class="description">À sa sortie, Radioactivity abordait la radioactivité avec une curiosité scientifique. Toutefois, les catastrophes nucléaires comme Tchernobyl et Fukushima ont poussé Kraftwerk à réviser les paroles, transformant la chanson en un plaidoyer anti-nucléaire. Les nouvelles versions mentionnent explicitement des sites de désastres, soulignant l'engagement du groupe envers les mouvements écologistes.</p>
 
     <img src="/assets/img/musique2.webp" alt="pochette album" class="img_musique">
 
-    <p class="main__description">En Allemagne, où le débat sur l'énergie nucléaire est vif, Radioactivity a eu un impact culturel significatif. La chanson est devenue un hymne pour ceux qui s'opposent à l'énergie nucléaire. En 1992, lors d'un événement Greenpeace, Kraftwerk a interprété une version modifiée pour protester contre l'usine nucléaire de Sellafield.</p>
+    <p class="description">En Allemagne, où le débat sur l'énergie nucléaire est vif, Radioactivity a eu un impact culturel significatif. La chanson est devenue un hymne pour ceux qui s'opposent à l'énergie nucléaire. En 1992, lors d'un événement Greenpeace, Kraftwerk a interprété une version modifiée pour protester contre l'usine nucléaire de Sellafield.</p>
 
     <img src="/assets/img/musique3.webp" alt="Centrale" class="img_musique">
 
-    <p class="main__description">Le morceau se distingue par son utilisation innovante des synthétiseurs et des vocodeurs. La voix monotone de Ralf Hütter et les sons électroniques créent une ambiance à la fois hypnotique et inquiétante, évoquant l'omniprésence invisible des radiations. Cette composition souligne la capacité de Kraftwerk à fusionner musique électronique et message social. </p>
+    <p class="description">Le morceau se distingue par son utilisation innovante des synthétiseurs et des vocodeurs. La voix monotone de Ralf Hütter et les sons électroniques créent une ambiance à la fois hypnotique et inquiétante, évoquant l'omniprésence invisible des radiations. Cette composition souligne la capacité de Kraftwerk à fusionner musique électronique et message social. </p>
 
     <img src="/assets/img/musique4.webp" alt="Centrale" class="img_musique">
 
-    <p class="main__description">Bien que le single n'ait pas connu un succès commercial immédiat, il a gagné en reconnaissance au fil du temps. En France et en Belgique, il a atteint un statut culte, influençant de nombreux artistes de la scène synth-pop. Aujourd'hui, Radioactivity est considérée comme une œuvre majeure de Kraftwerk, illustrant leur capacité à aborder des sujets complexes avec subtilité et profondeur.<br><br>
+    <p class="description">Bien que le single n'ait pas connu un succès commercial immédiat, il a gagné en reconnaissance au fil du temps. En France et en Belgique, il a atteint un statut culte, influençant de nombreux artistes de la scène synth-pop. Aujourd'hui, Radioactivity est considérée comme une œuvre majeure de Kraftwerk, illustrant leur capacité à aborder des sujets complexes avec subtilité et profondeur.<br><br>
 
         Radioactivity transcende son statut de simple chanson pour devenir une réflexion sur les promesses et périls de la technologie moderne. En adaptant leur message aux événements mondiaux, Kraftwerk a su maintenir la pertinence de leur œuvre tout en inspirant des générations d'artistes engagés. Leur musique reste un témoignage puissant des tensions entre progrès technologique et responsabilité environnementale.
     </p>
