--- a/en/otherproject.html
+++ b/en/otherproject.html
@@ -56,7 +56,7 @@
         </div>
     </a>
 
-    <a href="https://example.com/dronex" class="card">
+    <a href="http://dronexplorer.adrienchoulet.fr/fr/" class="card">
         <div class="card_content">
             <img src="/assets/img/dronex.webp" alt="dronex" class="image_card">
             <h3 class="title_card">DroneXplorer</h3>
@@ -72,7 +72,7 @@
         </div>
     </a>
 
-    <a href="https://example.com/afthertz" class="card">
+    <a href="http://afthertz.pauldarlef.fr/" class="card">
         <div class="card_content">
             <img src="/assets/img/radiopaul.webp" alt="Aft'Hertz" class="image_card">
             <h3 class="title_card">Aft'Hertz</h3>
@@ -80,7 +80,7 @@
         </div>
     </a>
 
-    <a href="https://example.com/trainmaglev" class="card">
+    <a href="https://gleeful-unicorn-aa273d.netlify.app" class="card">
         <div class="card_content">
             <img src="/assets/img/train.webp" alt="Train MagLev" class="image_card">
             <h3 class="title_card">Train MagLev</h3>
@@ -96,7 +96,7 @@
         </div>
     </a>
 
-    <a href="https://example.com/hypervision" class="card">
+    <a href="https://tiny-palmier-4a19c1.netlify.app/" class="card">
         <div class="card_content">
             <img src="/assets/img/hypervision.webp" alt="hypervision" class="image_card">
             <h3 class="title_card">HyperVision</h3>
