--- a/en/music.html
+++ b/en/music.html
@@ -35,23 +35,28 @@
 
     <img src="/assets/img/music.webp" alt="Music" class="main__image">
 
+
     <h1 class="main__title">Music</h1>
     
     <p class="main__description">Radioactivity, an iconic song by Kraftwerk from the album Radio-Activity (1975), explores the duality of radioactivity, blending scientific fascination with environmental concerns. This track, initially celebrating radio waves, has evolved to become a powerful commentary on nuclear dangers.</p>
 
     <img src="/assets/img/musique1.webp" alt="Kraftwerk" class="img_musique">
+    <p class="legende">Kraftwerk</p>
     
     <p class="description">Upon its release, Radioactivity addressed radioactivity with scientific curiosity. However, nuclear disasters like Chernobyl and Fukushima prompted Kraftwerk to revise the lyrics, transforming the song into an anti-nuclear plea. The new versions explicitly mention disaster sites, highlighting the group's commitment to environmental movements.</p>
 
     <img src="/assets/img/musique2.webp" alt="album cover" class="img_musique">
+    <p class="legende">Album cover</p>
 
     <p class="description">In Germany, where the debate on nuclear energy is intense, Radioactivity has had a significant cultural impact. The song has become an anthem for those opposing nuclear energy. In 1992, during a Greenpeace event, Kraftwerk performed a modified version to protest against the Sellafield nuclear plant.</p>
 
     <img src="/assets/img/musique3.webp" alt="Power plant" class="img_musique">
+    <p class="legende">CD</p>
 
     <p class="description">The track stands out for its innovative use of synthesizers and vocoders. Ralf Hütter's monotone voice and electronic sounds create an atmosphere that is both hypnotic and unsettling, evoking the invisible omnipresence of radiation. This composition underscores Kraftwerk's ability to merge electronic music with social messages.</p>
 
     <img src="/assets/img/musique4.webp" alt="Power plant" class="img_musique">
+    <p class="legende">Album cover</p>
 
     <p class="description">Although the single did not achieve immediate commercial success, it gained recognition over time. In France and Belgium, it reached cult status, influencing many artists in the synth-pop scene. Today, Radioactivity is considered a major work by Kraftwerk, illustrating their ability to tackle complex subjects with subtlety and depth.<br><br>
 
