--- a/fr/film.html
+++ b/fr/film.html
@@ -46,19 +46,28 @@
 
     <p class="description">Le documentaire est structuré comme un message adressé à ces générations futures, posant des questions essentielles : comment avertir nos descendants des dangers cachés sous terre ? Quels signes ou langages pourraient-ils comprendre ? Le film met en lumière les défis liés à la communication intergénérationnelle et à la préservation de l'information sur des échelles de temps inimaginables.</p>
 
-    <img src="/assets/img/film1.webp" alt="intoeternity" class="img_film">
+    <figure>
+        <img src="/assets/img/film1.webp" alt="intoeternity" class="img_film">
+        <figcaption class="legende">Scène du documentaire Into Eternity</figcaption>
+    </figure>
 
     <p class="description">Madsen adopte une approche stylistique saisissante, combinant des images épurées avec une narration réfléchie pour explorer les implications éthiques et pratiques du stockage nucléaire. Le film interroge non seulement la faisabilité technique d'un tel projet, mais aussi notre responsabilité collective envers l'avenir de l'humanité. Il soulève la question de savoir si nous avons le droit d'imposer ce fardeau à 3 000 générations futures simplement pour maintenir notre mode de vie actuel.</p>
 
-    <img src="/assets/img/film2.webp" alt="intoeternity" class="img_film">
+    <figure>
+        <img src="/assets/img/film2.webp" alt="intoeternity" class="img_film">
+        <figcaption class="legende">Scène du documentaire Into Eternity</figcaption>
+    </figure>
 
     <p class="description">Madsen adopte une approche stylistique saisissante, combinant des images épurées avec une narration réfléchie pour explorer les implications éthiques et pratiques du stockage nucléaire. Le film interroge non seulement la faisabilité technique d'un tel projet, mais aussi notre responsabilité collective envers l'avenir de l'humanité. Il soulève la question de savoir si nous avons le droit d'imposer ce fardeau à 3 000 générations futures simplement pour maintenir notre mode de vie actuel.</p>
 
-    <img src="/assets/img/film3.webp" alt="intoeternity" class="img_film">
+    <figure>
+        <img src="/assets/img/film3.webp" alt="intoeternity" class="img_film">
+        <figcaption class="legende">Scène du documentaire Into Eternity</figcaption>
+    </figure>
 
-    <p class="description">Into Eternity a été salué pour sa capacité à provoquer une réflexion profonde sur les limites de la science et de la technologie face aux défis environnementaux. Il a reçu des critiques positives pour sa présentation suggestive et son exploration audacieuse des dangers liés aux déchets nucléaires. Le film a remporté le Green Screen Documentary Award au Festival International du Film Documentaire d'Amsterdam (IDFA). <br><br>
+    <p class="description">Into Eternity a été salué pour sa capacité à provoquer une réflexion profonde sur les limites de la science et de la technologie face aux défis environnementaux. Il a reçu des critiques positives pour sa présentation suggestive et son exploration audacieuse des dangers liés aux déchets nucléaires. Le film a remporté le Green Screen Documentary Award au Festival International du Film Documentaire d'Amsterdam (IDFA). <br><br>
 
-        En conclusion, Into Eternity n'est pas seulement un documentaire sur le stockage nucléaire ; c'est une méditation sur le temps, la responsabilité et l'héritage que nous laissons derrière nous. Il invite chaque spectateur à réfléchir sur le rôle que nous jouons dans la préservation de notre planète pour les générations futures. Ce film essentiel souligne l'importance cruciale d'une gestion responsable des déchets nucléaires dans notre quête d'un avenir durable.
+        En conclusion, Into Eternity n'est pas seulement un documentaire sur le stockage nucléaire ; c'est une méditation sur le temps, la responsabilité et l'héritage que nous laissons derrière nous. Il invite chaque spectateur à réfléchir sur le rôle que nous jouons dans la préservation de notre planète pour les générations futures. Ce film essentiel souligne l'importance cruciale d'une gestion responsable des déchets nucléaires dans notre quête d'un avenir durable.
     </p>
 
     <h2 class="title_2"> autres<h2 class="orange"> film </h2>
