ajout transition page contact

--- a/fr/contact.html
+++ b/fr/contact.html
@@ -72,9 +72,9 @@
     </div>
     <hr>
     <div class="menu">
-        <a href="#">À Propos</a><br><br>
-        <a href="#">Glossaire</a><br><br>
-        <a href="#">Contact</a>
+        <a href="apropos.html">À Propos</a><br><br>
+        <a href="glossaire.html">Glossaire</a><br><br>
+        <a href="contact.html">Contact</a>
     </div>
     <img src="/assets/icon/mmi.svg" alt="Logo MMI" class="mmi-logo">
     <div class="credits">
