Essaie de correction de l'image

--- a/fr/Realisateur.html
+++ b/fr/Realisateur.html
@@ -33,7 +33,7 @@
 
 <main>
 
-    <img src="/assets/img/réalisateur.webp" alt="Realisateur" class="main__image">
+    <img src="/assets/img/realisateur.webp" alt="Realisateur" class="main__image">
 
     <h1 class="main__title">Réalisateur</h1>
     
